# Chat-JCT

./: .gitignore  README.md  pyproject.toml  run_pylint.sh  run_service.sh  run_ui.sh  run_yapf.sh
app/: main.py
app/internal/: consts.py  exceptions.py  infra_logger.py
app/routers/: example.py  root.py
app/routers/chat/: chatapi.py  indexed_chat_api.py  llama_index_com.py  llmcom.py
app/routers/chat/models/: indexed_query_model.py  query_model.py
assistants/: create-storage.py
assistants/data/infra_ui/: essay.txt  example.txt
assistants/storage/infra_ui/: docstore.json  index_store.json  vector_store.json
demo/: Demo.py
demo/pages/: 1_💬_LLM_Chat.py  2_🏗️_Infra_UI_Chat.py
tests/e2e/: test_model_apis.py
tests/unit/: test_logger.py  test_query_model.py
